force-app/main/default/objects/DiscountLine__c/DiscountLine__c.object-meta.xml
<CustomObject>
    <description>Défini les lignes de promotions pour un produit spécifique ou une entité.
Promotion gérée par le marketing.</description>
    <label>Ligne de promotion</label>
    <nameField>
        <displayFormat>LP-{0000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lignes de promotion</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>