force-app/main/default/objects/DiscountLine__c/fields/discountAmount__c.field-meta.xml
<CustomField>
    <fullName>discountAmount__c</fullName>
    <formula>discount__r.discountAmount__c</formula>
    <label>[#] Remise (€)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>