force-app/main/default/objects/DiscountLine__c/fields/discountPercent__c.field-meta.xml
<CustomField>
    <fullName>discountPercent__c</fullName>
    <formula>discount__r.discountPercent__c</formula>
    <label>[#] Remise (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>