force-app/main/default/objects/DiscountLine__c/fields/endDate__c.field-meta.xml
<CustomField>
    <fullName>endDate__c</fullName>
    <formula>discount__r.endDate__c</formula>
    <label>[#] Date de fin</label>
    <type>Date</type>
</CustomField>