force-app/main/default/objects/DiscountLine__c/fields/operation__c.field-meta.xml
<CustomField>
    <fullName>operation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opération</label>
    <referenceTo>ReferentielOperation__c</referenceTo>
    <relationshipLabel>Lignes de promotion</relationshipLabel>
    <relationshipName>DiscountLines</relationshipName>
    <type>Lookup</type>
</CustomField>