force-app/main/default/objects/DiscountLine__c/fields/origin__c.field-meta.xml
<CustomField>
    <fullName>origin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>La valeur de ce champ doit être de type &quot;Source&quot;</errorMessage>
        <filterItems>
            <field>Referencial__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Source</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Referencial__c</referenceTo>
    <relationshipLabel>Lignes de promotion</relationshipLabel>
    <relationshipName>DiscountLines</relationshipName>
    <type>Lookup</type>
</CustomField>