force-app/main/default/objects/DiscountLine__c/fields/salesEntity__c.field-meta.xml
<CustomField>
    <fullName>salesEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Entité magasin dont la promotion s&apos;applique.</description>
    <inlineHelpText>La promotion s&apos;applique à l&apos;entité défini et à ses enfants</inlineHelpText>
    <label>Entité</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Vous devez sélectionner une entité (magasin)</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Entity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lignes de promotion</relationshipLabel>
    <relationshipName>DiscountLines</relationshipName>
    <type>Lookup</type>
</CustomField>