force-app/main/default/objects/DiscountLine__c/fields/startDate__c.field-meta.xml
<CustomField>
    <fullName>startDate__c</fullName>
    <formula>discount__r.startDate__c</formula>
    <label>[#] Date de début</label>
    <type>Date</type>
</CustomField>