force-app/main/default/objects/DiscountLine__c/recordTypes/DiscountLineEntity.recordType-meta.xml
<RecordType>
    <fullName>DiscountLineEntity</fullName>
    <active>true</active>
    <description>Ligne de promotion sur une entité</description>
    <label>Promotion sur entité</label>
</RecordType>