force-app/main/default/objects/DiscountLine__c/recordTypes/DiscountLineOperation.recordType-meta.xml
<RecordType>
    <fullName>DiscountLineOperation</fullName>
    <active>true</active>
    <description>Ligne de promotion sur une opération d&apos;un projet</description>
    <label>Promotion sur opération</label>
</RecordType>