force-app/main/default/objects/DiscountLine__c/recordTypes/DiscountLineProduct.recordType-meta.xml
<RecordType>
    <fullName>DiscountLineProduct</fullName>
    <active>true</active>
    <description>Ligne de promotion sur un produit</description>
    <label>Promotion sur produit</label>
</RecordType>