force-app/main/default/objects/DiscountLine__c/recordTypes/DiscountLineSource.recordType-meta.xml
<RecordType>
    <fullName>DiscountLineSource</fullName>
    <active>true</active>
    <description>Ligne de promotion sur une source d&apos;un projet</description>
    <label>Promotion sur source</label>
</RecordType>