force-app/main/default/objects/DiscountLine__c/validationRules/VR_K3_DiscountLine_EntityRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_DiscountLine_EntityRequired</fullName>
    <active>true</active>
    <description>Si la ligne est de type &quot;Entité&quot;, alors le champ &quot;Entité&quot; est obligatoire</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
RecordType.DeveloperName = &apos;DiscountLineEntity&apos; &amp;&amp;
ISBLANK( salesEntity__c )</errorConditionFormula>
    <errorDisplayField>salesEntity__c</errorDisplayField>
    <errorMessage>Le champ &quot;Entité&quot; est obligatoire!</errorMessage>
</ValidationRule>