force-app/main/default/objects/DiscountLine__c/validationRules/VR_K3_DiscountLine_OperationRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_DiscountLine_OperationRequired</fullName>
    <active>true</active>
    <description>Si la ligne est de type &quot;Opération&quot;, alors le champ &quot;Opération&quot; est obligatoire</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
RecordType.DeveloperName = &apos;DiscountLineOperation&apos; &amp;&amp;
ISBLANK( operation__c )</errorConditionFormula>
    <errorDisplayField>operation__c</errorDisplayField>
    <errorMessage>Le champ &quot;Opération&quot; est obligatoire!</errorMessage>
</ValidationRule>