force-app/main/default/objects/DiscountLine__c/validationRules/VR_K3_DiscountLine_ProductRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_DiscountLine_ProductRequired</fullName>
    <active>true</active>
    <description>Si la ligne est de type &quot;Produit&quot;, alors le champ &quot;Produit&quot; est obligatoire</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
RecordType.DeveloperName = &apos;DiscountLineProduct&apos; &amp;&amp;
ISBLANK( product__c )</errorConditionFormula>
    <errorDisplayField>product__c</errorDisplayField>
    <errorMessage>Le champ &quot;Produit&quot; est obligatoire!</errorMessage>
</ValidationRule>