force-app/main/default/objects/DiscountLine__c/validationRules/VR_K3_DiscountLine_SourceRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_DiscountLine_SourceRequired</fullName>
    <active>true</active>
    <description>Si la ligne est de type &quot;Source&quot;, alors le champ &quot;Source&quot; est obligatoire</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
RecordType.DeveloperName = &apos;DiscountLineSource&apos; &amp;&amp;
ISBLANK( origin__c )</errorConditionFormula>
    <errorDisplayField>origin__c</errorDisplayField>
    <errorMessage>Le champ &quot;Source&quot; est obligatoire!</errorMessage>
</ValidationRule>