force-app/main/default/objects/DiscountLine__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>discount__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>salesEntity__c</columns>
    <columns>product__c</columns>
    <columns>origin__c</columns>
    <columns>discountAmount__c</columns>
    <columns>discountPercent__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>